--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -111,7 +111,8 @@
   "confirm": {
     "restart": "האם אתה בטוח שברצונך להתחיל את הטורניר מחדש?",
     "yes": "כן",
-    "no": "לא"
+    "no": "לא",
+    "replaceData": "האם ברצונך להחליף את כל הנתונים הקיימים? לחץ 'כן' להחלפה מלאה או 'לא' להוספת נתונים חדשים בלבד."
   },
   "export": {
     "generated": "נוצר",
@@ -146,7 +147,13 @@
     "profitByPlayer": "רווח לפי שחקן",
     "entriesByPlayer": "כניסות לפי שחקן",
     "noStatsAvailable": "אין מספיק נתונים לסטטיסטיקות. שחק עוד טורנירים!",
-    "lastTournaments": "{count} טורנירים אחרונים"
+    "lastTournaments": "{count} טורנירים אחרונים",
+    "exportCSV": "ייצא היסטוריה כקובץ CSV",
+    "importCSV": "ייבא היסטוריה מקובץ CSV",
+    "exportSuccess": "היסטוריית הטורנירים יוצאה בהצלחה",
+    "importSuccess": "היסטוריית הטורנירים יובאה בהצלחה",
+    "importError": "שגיאה בייבוא היסטוריית הטורנירים. ייתכן שהקובץ אינו בפורמט תקין.",
+    "backupData": "גיבוי נתונים"
   },
   "actions": "פעולות"
 }
